# SkanCoin

./: .gitignore  README.md
DiagnosticClient/: Main.r  main.R
DiagnosticClient/app/: app.R
DiagnosticClient/app/data/: data.Rda
SkanCoin/: CMakeList.txt  CMakeLists.txt  config.hpp.in
SkanCoin/build2/: CMakeCache.txt  Makefile  blockchainstats.txt  blocksminingtime.txt  cmake_install.cmake  private_key  public_key  skancoin
SkanCoin/src/: Main.cpp  debug.hpp
SkanCoin/src/Blockchain/: Block.cpp  Block.hpp  Blockchain.cpp  Blockchain.hpp  Transaction.cpp  TransactionComponents.cpp  TransactionComponents.hpp  TransactionPool.cpp  TransactionPool.hpp  Transactions.cpp  Transactions.hpp  Wallet.cpp  Wallet.hpp
SkanCoin/src/HttpServer/: CMakeLists.txt  HttpServer.cpp  HttpServer.hpp
SkanCoin/src/P2P/: P2PServer.cpp  P2PServer.hpp  Peer.cpp  Peer.hpp
SkanCoin/src/P2P (copia)/: p2p.html
SkanCoin/src/P2PServer/: P2PServer.cpp  P2PServer.hpp
WebApp/: index.html  main.css  mainController.js
doc/: Relazione_Scavo_Messina.docx
